--- a/backend/index.html
+++ b/backend/index.html
@@ -408,7 +408,7 @@
                                                                 <td><a href="#" target="_blank">fa42de2b9457874647b1f913b61780...</a></td>
                                                                 <td>1 minute ago</td>
                                                                 <td class="text-center">
-                                                                    <button class="btn btn-success">
+                                                                    <button class="btn btn-success btn--full">
                                                                     <span data-c="1.5110"> 21.511 BNC</span>
                                                                     </button>
                                                                 </td>
@@ -418,7 +418,7 @@
                                                                 <td><a href="#" target="_blank">a5b2de5d09153d7e492b919ac8b474...</a></td>
                                                                 <td>1 minute ago</td>
                                                                 <td class="text-center">
-                                                                    <button class="btn btn-success">
+                                                                    <button class="btn btn-success btn--full">
                                                                     <span data-c="0.6975"> 20.351 BNC</span>
                                                                     </button>
                                                                 </td>
@@ -428,7 +428,7 @@
                                                                 <td><a href="#" target="_blank">ad18ea2e39a350076840b416719d24...</a></td>
                                                                 <td>1 minute ago</td>
                                                                 <td class="text-center">
-                                                                    <button class="btn btn-success">
+                                                                    <button class="btn btn-success btn--full">
                                                                     <span data-c="0.0138"> 35.007 BNC</span>
                                                                     </button>
                                                                 </td>
@@ -438,7 +438,7 @@
                                                                 <td><a href="#" target="_blank">edd70a0a4cca844a64da6ad2dccfc5...</a></td>
                                                                 <td>2 minutes ago</td>
                                                                 <td class="text-center">
-                                                                    <button class="btn btn-success">
+                                                                    <button class="btn btn-success btn--full">
                                                                     <span data-c="0.0246"> 87.000 BNC</span>
                                                                     </button>
                                                                 </td>
@@ -448,7 +448,7 @@
                                                                 <td><a href="#" target="_blank">23ccbbbf2c4f6a711222217e9ce82f...</a></td>
                                                                 <td>2 minutes ago</td>
                                                                 <td class="text-center">
-                                                                    <button class="btn btn-success">
+                                                                    <button class="btn btn-success btn--full">
                                                                     <span data-c="0.0043"> 56.054 BNC</span>
                                                                     </button>
                                                                 </td>
@@ -458,7 +458,7 @@
                                                                 <td><a href="#" target="_blank">df3edd3f43841ac4026741dca7b503...</a></td>
                                                                 <td>4 minutes ago</td>
                                                                 <td class="text-center">
-                                                                    <button class="btn btn-success">
+                                                                    <button class="btn btn-success btn--full">
                                                                     <span data-c="0.7027"> 20.356 BNC</span>
                                                                     </button>
                                                                 </td>
@@ -468,7 +468,7 @@
                                                                 <td><a href="#" target="_blank">cdc1fBNC2de39307c09c8d8193c5bd...</a></td>
                                                                 <td>3 minutes ago</td>
                                                                 <td class="text-center">
-                                                                    <button class="btn btn-success">
+                                                                    <button class="btn btn-success btn--full">
                                                                     <span data-c="2.8937"> 2.894 BNC</span>
                                                                     </button>
                                                                 </td>
