--- a/backend/member.html
+++ b/backend/member.html
@@ -289,7 +289,7 @@
                                                                     </a>
                                                                 </li>
                                                                 <li class="block-modal-addMember">
-                                                                    <a href="#" title="">
+                                                                    <a href="#" title="" data-toggle="modal" data-target="#AddTree">
                                                                         <div class="AddTree">
                                                                             <img src="dist/img/addavatar.png">
                                                                             <div class="name-npp-new"></div>
@@ -299,7 +299,7 @@
                                                             </ul>
                                                         </li>
                                                         <li class="block-modal-addMember">
-                                                            <a href="#" title="">
+                                                            <a href="#" title="" data-toggle="modal" data-target="#AddTree">
                                                                 <div class="AddTree">
                                                                     <img src="dist/img/addavatar.png">
                                                                     <div class="name-npp-new"></div>
@@ -309,7 +309,7 @@
                                                     </ul>
                                                 </li>
                                                 <li class="block-modal-addMember">
-                                                    <a href="#" title="">
+                                                    <a href="#" title="" data-toggle="modal" data-target="#AddTree">
                                                         <div class="AddTree">
                                                             <img src="dist/img/addavatar.png">
                                                             <div class="name-npp-new"></div>
