--- a/frontend/news.html
+++ b/frontend/news.html
@@ -127,7 +127,7 @@
 									    </div>
 									    <div class="col-xs-8">
 									        <div class="row">
-									            <a href="#" title="">
+									            <a href="news-detail.html" title="">
 									                <h2>INSTANT WITHDRAWALS</h2>
 									            </a>
 									            <p>Withdrawal requests are processed instantly 24/7. Investors may make unlimited amount of requests per day. There is no fee for withdrawals of hourly interest.</p>
@@ -144,7 +144,7 @@
 								        </div>
 								        <div class="col-xs-8">
 								            <div class="row">
-								                <a href="#" title="">
+								                <a href="news-detail.html" title="">
 								                    <h2>AUTOMATIC INTEREST</h2>
 								                </a>
 								                <p>Investor’s hourly profit will be added to account balance automatically. Investors can withdraw money instantly every hour.</p>
@@ -172,13 +172,13 @@
 							 	<li class="col-sm-6 col-xs-12 col-12 news-home">
 								    <div class="row">
 								        <div class="col-xs-4">
-								            <a href="#" title="">
+								            <a href="news-detail.html" title="">
 									        	<img src="images/news/news-4-1503650285.jpg" alt="INSTANT WITHDRAWALS">
 									        </a>
 								        </div>
 								        <div class="col-xs-8">
 								            <div class="row">
-								                <a href="#" title="">
+								                <a href="news-detail.html" title="">
 								                    <h2>BANK LEVEL SECURITY</h2>
 								                </a>
 								                <p>This program is secured with EV SSL, which guarantees insurance to all transactions and encrypts all information provided. The highest DDOS protection is provided by DDOS-Guard!</p>
