--- a/frontend/404.html
+++ b/frontend/404.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
-	<title>Contact</title>
+	<title>404</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="robots" content="index,follow" />
@@ -115,32 +115,15 @@
 		<section id="main">
 			<section class="block-page-contact">
 				<div class="container">
-					<h2 class="page-title">BITEX CHANGE COIN</h2>
 					<div class="row">
-						<div class="col-xs-12 col-sm-6">
-							<iframe frameborder="0" height="450" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255281.22544736404!2d103.70416266997594!3d1.3139961238612636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da11238a8b9375%3A0x887869cf52abf5c4!2sSingapore!5e0!3m2!1sen!2s!4v1503649803149" style="border:0" width="100%"></iframe>
-						</div>
-						<div class="col-xs-12 col-sm-6">
-							<form action="contact" method="">
-								<div class="form-group name">
-									<input class="form-control" name="title" type="text" placeholder="Full name" id="name" />
-								</div>
-								<div class="form-group email">
-									<input class="form-control" name="email" type="text" id="email" placeholder="Email" />
-								</div>
-								<div class="form-group text">
-									<input class="form-control" name="phone" type="text" placeholder="Phone" />
-								</div>
-								<div class="form-group text">
-									<input class="form-control" name="address" type="text" placeholder="Address" />
-								</div>
-								<div class="form-group text">
-									<textarea class="form-control md-textarea" name="content" placeholder="Message Content"></textarea>
-								</div>
-								<div class="text-center">
-									<button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> Send</button>
-								</div>								
-							</form>
+						<div class="text-center">
+							<h1>Trang không tồn tại !</h1>
+							<p>Vui lòng quay lại <a href="trang-chu.html" data-name="trang-chu" data-title="Trang chủ">trang chủ</a> hoặc tìm kiếm bài viết khác !</p>
+							<p class="text-muted"> Nếu có vấn đề gì xin quý khách vui lòng liên hệ quản trị !</p>
+							<p>
+								<a href="tel:0987666555" class="btn btn-primary"><i class="fa fa-phone"></i> 0987666555</a>
+								<a href="mailto:contact@businessbnc.com" class="btn btn-danger"><i class="fa fa-envelope"></i> contact@businessbnc.com</a>
+							</p>
 						</div>
 					</div>
 				</div>
