--- a/backend/change-info.html
+++ b/backend/change-info.html
@@ -163,15 +163,15 @@
                 <section class="content">
                     <div class="account_right" id="account_right">
                         <ul class="nav nav-tabs ui-sortable-handle">
-                            <li class="active"><a href="#AccountInformation" data-toggle="tab"> <i class="fa fa-user"></i> Account Infomation</a></li>
-                            <li><a href="#ChangePassword" data-toggle="tab"><i class="fa fa-key "></i> Change the password</a></li>
-                            <li><a href="#ChangePasswordtransaction" data-toggle="tab"><i class="fa fa-lock "></i> Change transaction password</a></li>
+                            <li class="active"><a href="#AccountInformation" data-toggle="tab"><i class="fa fa-user mr05"></i>Account Infomation</a></li>
+                            <li><a href="#ChangePassword" data-toggle="tab"><i class="fa fa-key mr05"></i>Change the password</a></li>
+                            <li><a href="#ChangePasswordtransaction" data-toggle="tab"><i class="fa fa-lock mr05"></i>Change transaction password</a></li>
                         </ul><!-- /.nav-tabs -->
                         <div class="tab-content no-padding">
                             <div class="box box-primary tab-pane active" id="AccountInformation">
                                 <form action="changeInfo" method="get" class="form-horizontal contactAjax">
                                     <div class="box-header with-border">
-                                        <strong class="box-title"><i class="fa fa-user "></i> Account Infomation</strong>
+                                        <strong class="box-title"><i class="fa fa-user "></i>Account Infomation</strong>
                                         <div class="box-tools pull-right">
                                             <div class="box-tools pull-right">
                                                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
