--- a/backend/transaction.html
+++ b/backend/transaction.html
@@ -163,10 +163,10 @@
                 <section class="content">
                     <div class="account_right" id="account_right">
                         <ul class="nav nav-tabs ui-sortable-handle">
-                            <li class="active"><a href="#CashAccount" data-toggle="tab"> <i class="fa fa-user"></i> CASH</a></li>
-                            <li><a href="#BecAccount" data-toggle="tab"><i class="fa fa-key "></i> BNC</a></li>
-                            <li><a href="#LnnAccount" data-toggle="tab"><i class="fa fa-lock "></i> Daily profits</a></li>
-                            <li><a href="#TradeAccount" data-toggle="tab"><i class="fa fa-lock "></i> Transaction money</a></li>
+                            <li class="active"><a href="#CashAccount" data-toggle="tab"><i class="fa fa-user mr05"></i>CASH</a></li>
+                            <li><a href="#BecAccount" data-toggle="tab"><i class="fa fa-key mr05"></i>BNC</a></li>
+                            <li><a href="#LnnAccount" data-toggle="tab"><i class="fa fa-lock mr05"></i>Daily profits</a></li>
+                            <li><a href="#TradeAccount" data-toggle="tab"><i class="fa fa-lock mr05"></i>Transaction money</a></li>
                         </ul>
                         <div class="tab-content no-padding">
                             <div class="tab-pane active" id="CashAccount">
