--- a/backend/upgrade-package.html
+++ b/backend/upgrade-package.html
@@ -163,8 +163,8 @@
                 <section class="content">
                     <div class="account_right" id="account_right">
                         <ul class="nav nav-tabs ui-sortable-handle">
-                            <li class="active"><a href="#Member" data-toggle="tab" aria-expanded="true"> <i class="fa fa-money"></i> Upgrade member packages</a></li>
-                            <li><a href="#LNN" data-toggle="tab" aria-expanded="false"> <i class="fa fa-money"></i> Upgrade the Profits Package</a></li>
+                            <li class="active"><a href="#Member" data-toggle="tab" aria-expanded="true"><i class="fa fa-money mr05"></i>Upgrade member packages</a></li>
+                            <li><a href="#LNN" data-toggle="tab" aria-expanded="false"><i class="fa fa-money mr05"></i>Upgrade the Profits Package</a></li>
                         </ul><!-- /.nav-tabs -->
                         <div class="tab-content no-padding">
                             <div class="box box-primary tab-pane active" id="Member">
